# macintosh-ai

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: ai_model.c  ai_model.h  constants.h  error.c  error.h  globals.c  main.c  main.r
src/chatbot/: markov.c  markov.h  markov_data.c  markov_data.h  model_manager.c  model_manager.h  openai.c  openai.h  template.c  template.h  template_data.c  template_data.h
src/nuklear/: nuklear.h  nuklear_quickdraw.h
src/sound/: beepbop.c  beepbop.h  tetris.c  tetris.h
src/ui/: about_window.c  about_window.h  chat_window.c  chat_window.h  event.c  event.h  menu.c  menu.h  splash_window.c  splash_window.h  utils.c  utils.h  window_manager.c  window_manager.h
